Fri May 29 05:35:23 GMT 2015  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: sortable_unserialise() can't validly
	  be marked as XAPIAN_CONST_FUNCTION, since scalbn() can raise
	  FE_OVERFLOW or FE_UNDERFLOW floating point exceptions.  It isn't
	  a function that's likely to be called such that the result can
	  be usefully subject to CSE or eliminated as dead code anyway.

Fri May 29 05:31:29 GMT 2015  Olly Betts <olly@survex.com>

	* api/sortable-serialise.cc: Use scalbn() instead of ldexp() in
	  sortable_unserialise(), as ldexp() can set errno, which it seems
	  better to avoid doing.

Fri May 29 05:15:09 GMT 2015  Olly Betts <olly@survex.com>

	* api/sortable-serialise.cc,include/xapian/queryparser.h: Tweak
	  sortable_unserialise() not to construct std::string objects (as that
	  could throw std::bad_alloc), and mark it as XAPIAN_NOTHROW.

Thu May 28 13:49:37 GMT 2015  Olly Betts <olly@survex.com>

	* api/query.cc,api/queryinternal.cc,api/queryinternal.h,
	  include/xapian/query.h,include/xapian/unicode.h,unicode/uniParse.tcl,
	  unicode/utf8itor.cc: Add attributes where appropriate.

Thu May 28 10:37:32 GMT 2015  Olly Betts <olly@survex.com>

	* generate-exceptions,include/xapian/: Remove XAPIAN_PURE_FUNCTION
	  from functions which could throw an exception (which aren't really
	  pure).  While we're happy for calls to these functions to be CSE-ed,
	  the compiler might more assumptions about a pure function - clang
	  seems to assume pure => nothrow for example.

Wed May 27 02:05:23 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Tue May 26 23:15:21 GMT 2015  Olly Betts <olly@survex.com>

	* AUTHORS: Update.

Tue May 26 23:12:53 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Credit Mihai Bivol for Xapian::Snipper in 1.3.2 changes.

Tue May 26 06:14:22 GMT 2015  Olly Betts <olly@survex.com>

	* include/xapian/intrusive_ptr.h,tests/api_none.cc: Fix issue with 
	  the optional reference counting where the reference count of a